// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VAppBar should match a snapshot 1`] = `
<header class="v-app-bar v-app-bar--is-active v-app-bar--density-default"
        style="top: 0px; height: 64px; margin-left: 0px; margin-top: 0px; z-index: 1004; transform: translateY(0%); position: fixed;"
>
  <div class="v-app-bar__content"
       style="height: 64px;"
  >
  </div>
</header>
`;

exports[`VAppBar should render image 1`] = `
<header class="v-app-bar v-app-bar--is-active v-app-bar--density-default"
        style="top: 0px; height: 64px; margin-left: 0px; margin-top: 0px; z-index: 1004; transform: translateY(0%); position: fixed;"
>
  <div class="v-app-bar__image">
    <div class="v-responsive v-img v-img--booting">
      <div class="v-responsive__sizer">
      </div>
      <transition-stub>
      </transition-stub>
    </div>
  </div>
  <div class="v-app-bar__content"
       style="height: 64px;"
  >
  </div>
</header>
`;
